--- a/css/style.less
+++ b/css/style.less
@@ -96,6 +96,15 @@
                 grid-template-columns: repeat(5,1fr);
                 grid-gap: 24px;
                 align-items: flex-end;
+                @media(min-width:991px) and (max-width:1124px) {
+                    grid-template-columns: repeat(3, 1fr);
+                }
+                @media(min-width:768px) and (max-width:991px) {
+                    grid-template-columns: repeat(3, 1fr);
+                }
+                @media (max-width:768px) {
+                    grid-template-columns: repeat(1, 1fr);
+                }
                 label{
                     font-size: 15px;
                     color: #065a86;
@@ -196,6 +205,9 @@
             border-radius:3px;
             overflow: hidden;
             position: relative;
+            img{
+                width: 100%;
+            }
             &:hover{
                 .overimg{
                     height: 100%;
@@ -237,7 +249,44 @@
         }
     }
     .sectionfortune{
-        
+        padding: 110px 0;
+        background:url('../images/bannerimgtwo.jpg') no-repeat;
+        background-size:cover;
+        background-position:center;
+        p{
+            font-size: 16px;
+            color: #555555;
+            font-family:Montserrat-Regular;
+            line-height: 28px;
+            padding: 11px 0 33px 0;
+        }
+        .heading{
+            text-align: left;
+        }
+        .ulone{
+            li{
+                font-size: 17px;
+                color: #333333;
+                font-family:Montserrat-SemiBold;
+                position: relative;
+                padding-left: 26px;
+                margin-bottom: 18px;
+                &::before{
+                    content:"";
+                    width: 25px;
+                    height: 25px;
+                    display: block;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    background: url('../images/listdotstyle.png') no-repeat;
+                    background-position:center center;
+                }
+            }
+        }
+    }
+    .customersect{
+
     }
 
 
