--- a/css/style.less
+++ b/css/style.less
@@ -26,6 +26,10 @@
     font-family:Montserrat-SemiBold;
     src:url('../fonts/Montserrat-SemiBold.ttf') format('truetype');
 }
+@font-face{
+    font-family:Montserrat-LightItalic;
+    src:url('../fonts/Montserrat-LightItalic.ttf') format('truetype');
+}
 @media(min-width:1400px){
     .container{
         max-width:1200px;
@@ -286,9 +290,59 @@
         }
     }
     .customersect{
-
+        padding: 110px 0;
+        background: url('../images/bannerimgthree.jpg') no-repeat;
+        background-size:100% 100%;
+        background-position: center  center;
+        .slidersectone{
+            .sectcoma{
+                width: 74px;
+                margin: 50px auto 14px auto;
+            }
+            p{
+                font-size: 20px;
+                color: #00164d;
+                text-align: center;
+                margin-bottom: 64px;
+                font-family:Montserrat-LightItalic;
+            }
+            h6{
+                font-size: 20px;
+                color: #00164d;
+                font-family:Montserrat-Bold;
+                text-align: center;
+            }
+        }
+    }
+    .exploresect{
+        padding: 182px 0;
+        background: url('../images/bannerimgfour.jpg') no-repeat;
+        background-size: cover;
+        background-position: 60%;
+        h4{
+            font-size: 40px;
+            color: #ffffff;
+            font-family:Montserrat-Black;
+        }
+        .btn{
+            background: #ffb726;
+            color: #ffffff;
+            width: 239px;
+            margin: 20px 0;
+            font-family:Montserrat-SemiBold;
+        }
     }
 
-
+    footer{
+        background: #0b2733;
+        h6{
+            font-size: 14px;
+            color: #ffffff;
+            font-family:Montserrat-SemiBold;
+            padding: 20px 0;
+            text-align: center;
+        }
+       
+    }
 
 }
