--- a/css/style.less
+++ b/css/style.less
@@ -292,7 +292,7 @@
     .customersect{
         padding: 110px 0;
         background: url('../images/bannerimgthree.jpg') no-repeat;
-        background-size:100% 100%;
+        background-size:cover;
         background-position: center  center;
         .slidersectone{
             .sectcoma{
@@ -305,13 +305,71 @@
                 text-align: center;
                 margin-bottom: 64px;
                 font-family:Montserrat-LightItalic;
+                width: 80%;
+                margin: 0 auto;
             }
             h6{
                 font-size: 20px;
                 color: #00164d;
                 font-family:Montserrat-Bold;
                 text-align: center;
+                margin: 27px 0;
             }
+        }
+        .slick-slide{
+            outline: none;
+        }
+         .slick-dots {
+            position: absolute;
+            bottom: -62px;
+            display: block;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+            text-align: center;
+        }
+        .slick-dots li {
+            position: relative;
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            margin: 0 5px;
+            padding: 0;
+            cursor: pointer;
+        }
+        .slick-dots li button {
+            font-size: 0;
+            line-height: 0;
+            display: block;
+            width: 20px;
+            height: 20px;
+            padding: 5px;
+            cursor: pointer;
+            color: transparent;
+            border: 0;
+            outline: none;
+            background: transparent;
+            &::before {
+               
+                font-family: 'slick';
+                font-size: 44px;
+                line-height: 20px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 20px;
+                height: 20px;
+                content: '•';
+                text-align: center;
+                opacity: .25;
+                color: black;
+                -webkit-font-smoothing: antialiased;
+            }
+        }
+        .slick-dots li.slick-active button:before {
+            opacity: .75;
+            color: black;
         }
     }
     .exploresect{
@@ -345,4 +403,6 @@
        
     }
 
+    
+     
 }
