--- a/css/style.less
+++ b/css/style.less
@@ -223,7 +223,7 @@
             &:hover{
                 .overimg{
                     height: 100%;
-                    padding: 30% 0 0 0;
+                    padding: 38% 0 0 0;
                 }
                 .btntwo{
                     display: block !important;
@@ -233,10 +233,11 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                background: #099ae0;
+                background: rgba(9, 154, 224, 0.88);
                 bottom: 0;
                 height: 40px;
                 transition: .5s ease;
+                display: block;
                
                 .btntwo{
                     font-size: 17px;
