--- a/css/style.less
+++ b/css/style.less
@@ -446,6 +446,16 @@
             font-size: 14px;
         }
     }
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+        .formsection .insideformsect .gridsect {
+            display: flex;
+            justify-content: space-around;
+
+         }
+         .formsection .insideformsect .gridsect .btn{
+             width: 180px;
+         }
+    }
 
     
      
